feat: add core bot interfaces and loop skeleton

--- a/configs/config.example.json
+++ b/configs/config.example.json
@@ -1,6 +1,6 @@
 {
-  "username": "Demonster",
-  "password": "25031989Aa",
+  "username": "Vezdesui",
+  "password": "21011990Aa",
   "server_url": "https://space-aces.com/",
   "mode": "farm",
   "bot_settings": {
